# quarto-player

./: .gitignore  README.md  REPORT.md  pyproject.toml
quarto/: GAAgent.py  RLAgent.py  bestPlayer.py  main.py  play.py  players.py  results-100.txt  results-1000.txt  utility.py
quarto/populations/: genome.txt  policy-0.pkl  policy-1000.pkl  policy-5000.pkl  population_GA_v0.json  population_GA_v1.json  population_GA_v2.json  population_GA_v3.json  population_GA_v4.json
quarto/quarto/: objects.py
